Mejores los colores de cada tema y coloqué el botón iniciar en la pantalla principal.

--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
         <input class="rondas" id="cant-rondas" type="text">
     </div>  
 
+    <button id="iniciar">Iniciar</button>
+
     <!-- Menú desplegable para cambiar tema -->
     <select id="themeSelector">
         <option value="light">Tema Claro</option>
         <option value="dark">Tema Oscuro</option>
         <option value="blue">Tema Azul</option>
-        <option value="green">Tema Verde</option>
-        <!-- Agrega más opciones de temas aquí -->
+        <option value="green">Tema Verde 💕</option>
     </select>
 
     <div class="img-inicio">
